--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <script src="js/all.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-
-</head>
+    <title>Home</title>
 <body>
     <nav class="navbar navbar-expand-lg bg-transparent navbar-dark fixed-top">
         <div class="container-fluid bg-transparent">
@@ -25,7 +23,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="About.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Gallery</a>
@@ -37,7 +35,7 @@
                 <a class="nav-link" href="#">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacts</a>
+                <a class="nav-link" href="Contact.html">Contacts</a>
               </li>
             </ul>
           </div>
